--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,52 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Our own stuff to ignore #
+###########################
+# we won't include libraries such as our local copy of core.jar
+# we'll skip Eclipse's files that refer to the local setup and system
+# and also ignore the bin directory with compiled code and settings
+/libs
+/.settings
+/.project
+/.classpath
+/bin
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
